# local-ai

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  EVAL.md  FIX-NVIDIA.txt  LICENSE  MODELS.md  OCR_PIPELINE.md  QUICKSTART.md  README-BOT.md  README.md  ROUTING.md  TRAINING_PREP.md  auto-install.py  auto-setup.py  bot-install-commands.txt  check-server-simple.ps1  check-server.ps1  commands-for-server.txt  connect-and-install.py  create-qwen-pro.sh  create-tunnel.ps1  direct-commands.txt  download-models.ps1  full-install.py  install-ai-models.ps1  install-commands.sh  install-telegram-bot.sh  manual-setup-commands.md  ollama-client.py  optimize.sh  pyproject.toml  quick-install.md  qwen-system-prompt.txt  requirements-app.txt  requirements-bot.txt  requirements.txt  server-setup.md  setup-bot.sh  (+48 more)
app/: __init__.py
app/api/: main.py
app/bot/: pipeline.py  reasoning.py  telegram_app.py
app/config/: settings.py
app/llm/: judge.py  ollama_client.py  profiles.py
app/memory/: context.py  store.py
app/ocr/: base.py  extract_text.py  paddle_backend.py  pdf_text.py  pipeline.py  schema_pick.py  tesseract_backend.py
app/router/: classifier.py  explain.py  types.py  (+3 more)
docs/: FINETUNING.md  HANDOFF.md  RUNBOOK-SERVER.md  SECURITY.md
eval/: compare_outputs.py  generate_report.py  run_eval.py
modelfiles/: qwen-chat.Modelfile  qwen-json.Modelfile  qwen-judge.Modelfile  qwen-rag.Modelfile
scripts/: prepare_dpo_dataset.py  prepare_sft_dataset.py  validate_dataset.py
training/: bootstrap_on_server.sh  merge_jsonl.py  sample_hf_dataset.py  validate_sft_jsonl.py
(+22 files in other folders)
